gccida/c3/global_alloc
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:796:1: error: use of undeclared identifier '_OWORD'
_OWORD *v10; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:796:9: error: use of undeclared identifier 'v10'
_OWORD *v10; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1054:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1054:5: error: use of undeclared identifier 'regno_note'
rtx regno_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1079:4: error: expected ';' after expression
rtx insns; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1079:5: error: use of undeclared identifier 'insns'
rtx insns; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1081:4: error: expected ';' after expression
rtx v295; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1081:5: error: use of undeclared identifier 'v295'
rtx v295; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1215:36: error: use of undeclared identifier 'byte_9AA96F'
if ( *( _BYTE *)( v3 + 9981631) || byte_9AA96F[v3] ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1267:1: error: use of undeclared identifier 'v10'
v10 = xmalloc( 4 * v5); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1268:15: error: use of undeclared identifier 'v10'
reg_allocno = v10; 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1269:2: error: use of undeclared identifier 'v10'; did you mean 'v50'?
*v10 = -1LL; 
 ^~~
 v50
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:836:6: note: 'v50' declared here
int *v50; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1270:1: error: use of undeclared identifier 'v10'
v10[1] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1271:1: error: use of undeclared identifier 'v10'
v10[2] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1272:1: error: use of undeclared identifier 'v10'
v10[3] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1273:1: error: use of undeclared identifier 'v10'
v10[4] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1274:1: error: use of undeclared identifier 'v10'
v10[5] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1275:1: error: use of undeclared identifier 'v10'
v10[6] = -1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/global.c:1276:1: error: use of undeclared identifier 'v10'
v10[7] = -1LL; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/global_alloc/src/obj/global.o] Error 1
